src/endpoint-configuration-service/src/test/resources/expectations/envoy/single-endpoint-no-ssl/listener.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: envoy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    traffic_direction: OUTBOUND
    listener_filters:
      - name: envoy.filters.listener.tls_inspector
      - name: envoy.filters.listener.original_dst
    filter_chains:
      - name: https_chain
        filter_chain_match:
          transport_protocol: tls
        filters:
          - name: envoy.filters.network.tcp_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
              cluster: passthrough-https
              stat_prefix: https_passthrough
      - name: http_chain
        filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                  - name: domain
                    domains:
                      - 'domain'
                      - 'domain:6060'
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: expected-0
                  - name: allow_any
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: passthrough
              http_filters:
                - name: composite
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
                    extension_config:
                      name: composite
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite
                    xds_matcher:
                      matcher_list:
                        matchers:
                          - on_match:
                              action:
                                name: composite-action
                                typed_config:
                                  "@type": type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                                  typed_config:
                                    name: wasm
                                    typed_config:
                                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                                      config:
                                        configuration:
                                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                                          value: |
                                            { "general": {"authType":"ISHARE"}, "authRequestTimeout":15000} }
                                        vm_config:
                                          runtime: "envoy.wasm.runtime.v8"
                                          code:
                                            local:
                                              filename: "/cache-filter/cache-filter.wasm"
                            predicate:
                              and_matcher:
                                predicate:
                                  - single_predicate:
                                      input:
                                        name: request-path
                                        typed_config:
                                          "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                          header_name: ":path"
                                      value_match:
                                        prefix: /
                                  - or_matcher:
                                      predicate:
                                        - single_predicate:
                                            input:
                                              name: request-domain-no-port
                                              typed_config:
                                                "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                                header_name: ":authority"
                                            value_match:
                                              exact: domain
                                        - single_predicate:
                                            input:
                                              name: request-domain-6060
                                              typed_config:
                                                "@type": type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                                                header_name: ":authority"
                                            value_match:
                                              exact: domain:6060
                - name: envoy.filters.http.router
